fixing navbar mobile on safari 6

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,15 +336,16 @@ h6 {
 }
 
 .navbar-mobile {
-  position: relative;
-  overflow: hidden;
+  position: fixed;
+  overflow: visible;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
-  z-index: 999 !important;
+  -webkit-transform: translate3d(0, 0, 0);
+  z-index: 999;
   margin-top: 0;
 }
 
